# demo_automation_framework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: settings.json
src/api/: json_placeholder_api_client.py
src/api/models/: post.py
src/pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
src/ui/pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
src/ui/utils/: helpers.py
src/utils/: helpers.py
tests/: conftest.py
tests/api/: test_json_placeholder_api.py
tests/ui/: conftest.py  test_ui.py
